ui_tests/tests/should-fail/2_5-flex-mod-top-mod-attributes-below.rs
use flex_mod::flex_mod;

fn main() {}

#[flex_mod]
#[an_attribute]
mod __ {}
